Versão 2.0.0 | Versão Final

--- a/SistemaVendas/src/Formularios/Menu.form
+++ b/SistemaVendas/src/Formularios/Menu.form
@@ -1017,7 +1017,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="103" max="32767" attributes="0"/>
+                      <EmptySpace pref="192" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -1047,7 +1047,7 @@
                           <Component id="botaoClienteNaoCadastrado" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="telaVendas" max="32767" attributes="0"/>
+                      <Component id="telaVendas" pref="141" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -1182,7 +1182,7 @@
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="botaoFinalizarCompraCadastrado" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="56" max="32767" attributes="0"/>
+                              <EmptySpace pref="52" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -1427,21 +1427,24 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="167" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="txtSenha" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtSenha3" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtSenha2" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="campoSenhaConfirmacao" alignment="0" max="32767" attributes="0"/>
-                          <Component id="campoSenhaNova" alignment="0" max="32767" attributes="0"/>
-                          <Component id="campoSenhaNovaConfirmacao" alignment="0" min="-2" pref="167" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="167" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="txtSenha" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="txtSenha3" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="txtSenha2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="campoSenhaConfirmacao" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="campoSenhaNova" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="campoSenhaNovaConfirmacao" alignment="0" min="-2" pref="167" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="218" max="-2" attributes="0"/>
+                              <Component id="botaoAlterarSenha" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace pref="167" max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Component id="botaoAlterarSenha" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="216" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
