--- a/SistemaVendas/src/Formularios/Login.form
+++ b/SistemaVendas/src/Formularios/Login.form
@@ -24,7 +24,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="txtSenha" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="txtLogin" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -36,14 +36,14 @@
                   <Component id="campoSenha" alignment="0" max="32767" attributes="0"/>
                   <Component id="campoLogin" alignment="0" min="-2" pref="154" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="33" max="32767" attributes="0"/>
+              <EmptySpace pref="35" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
               <Component id="txtLogin" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="campoLogin" min="-2" max="-2" attributes="0"/>
@@ -56,7 +56,7 @@
                   <Component id="botaoSair" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="botaoEntrar9" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="39" max="32767" attributes="0"/>
+              <EmptySpace pref="45" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -85,7 +85,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="txtLogin">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Usuario.:"/>
+        <Property name="text" type="java.lang.String" value="Usuario:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JPasswordField" name="campoSenha">
